src/antlr/DartParser.java
// Generated from D:/ITE/4. Fourth Year/2022-2023/«·›’· «·À«‰Ì/ﬂÊ„»«Ì·—2/compiler/src/antlr\DartParser.g4 by ANTLR 4.12.0
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONST=1, SINGLE_QUOTE=2, SLASH=3, WHITESPACE=4, CHILD=5, COLOR=6, COLUMN=7, 
		WIDGET=8, MAIN=9, VALUE=10, PUT=11, FIND=12, OBX=13, RUNAPP=14, ROW=15, 
		CONTAINER=16, EXPANDED=17, PADDING=18, PADD=19, SCAFFOLD=20, BODY=21, 
		IMAGE=22, DECORATION=23, BORDER=24, BORDERRADIUS=25, BORDERRADIUSVALUE=26, 
		CHILDREN=27, TEXT=28, MATERIALBUTTON=29, CENTER=30, SIZEDBOX=31, APPBARWIDGET=32, 
		BACK=33, ICON=34, ICONS=35, APPBAR=36, HEIGHT=37, WIDTH=38, MAINAXIS=39, 
		CROSSAXIS=40, ONPRESSED=41, STATELESS=42, STATEFUL=43, SETSTATE=44, CLAS=45, 
		NUM=46, EXTENDS=47, EQUAL=48, RETURN=49, BUILD=50, STATE=51, HOME=52, 
		GET=53, TO=54, OVERRIDEWORD=55, BUILDCONTEXT=56, MATERIALAPP=57, DEBUG=58, 
		TITLE=59, THEME=60, THEMEDATA=61, PRIMARYSWATCH=62, KEYCAPITAL=63, KEYSMALL=64, 
		FINAL=65, SUPER=66, IMPORT=67, PACKAGE=68, LIST=69, URL=70, COMMA=71, 
		RIGHTKAOS=72, LEFTKAOS=73, RIGHTSQUARE=74, LEFTSQUARE=75, RIGHTCURLY=76, 
		LEFTCURLY=77, REQUIRED=78, THIS=79, TWOPOINTSABOVEEACHOTHER=80, FLUTTER=81, 
		DART=82, SEMICOLON=83, QUESTIONMARK=84, DOT=85, OPEN_C=86, CLOSE_C=87, 
		DOLAR=88, INT=89, RXINT=90, OBS=91, STRING=92, GETXCONTROLLER=93, VOID=94, 
		BOOLEAN=95, FALSE=96, TRUE=97, CREATESTATE=98, EDGEINSETS=99, COLORS=100, 
		COLORVALUE=101, BOXDECORATION=102, COMPOUNDASSIGMENTOPERATOR=103, MULTI_LINE_COMMENT=104, 
		SINGLE_LINE_COMMENT=105, INCREAMENTOPERATOR=106, MULTIPLICATIVEOPERATOR=107, 
		ADDITIVEOPERATOR=108, DIVISIONOPERATOR=109, MINUSOPERATOR=110, ICONSVALUE=111, 
		EQUALITYOPERATOR=112, ANDOR=113, WHILE=114, PRINT=115, TRY=116, VAR=117, 
		SWITCH=118, FOR=119, IF=120, ELSE=121, ENUM=122, DO=123, BREAK=124, CASE=125, 
		CATCH=126, CLASS=127, DEFAULT=128, STYLE=129, TEXTSTYLE=130, FONTSIZE=131, 
		FUNCTION=132, OPERATOR=133, STRING_LINE=134, VARIABLE=135, BOOL=136;
	public static final int
		RULE_prog = 0, RULE_imports = 1, RULE_main = 2, RULE_runappfunction = 3, 
		RULE_istedaaaclass = 4, RULE_callfunction = 5, RULE_widgetclass = 6, RULE_stlessclass = 7, 
		RULE_stlessclassbody = 8, RULE_stfulclass = 9, RULE_stateclass = 10, RULE_classes = 11, 
		RULE_regularclass = 12, RULE_controllerClass = 13, RULE_declare = 14, 
		RULE_defineRXvariable = 15, RULE_definevariable = 16, RULE_list = 17, 
		RULE_statement = 18, RULE_controllerFunctions = 19, RULE_controllerAttributes = 20, 
		RULE_controllerPutFind = 21, RULE_block = 22, RULE_changingvalue = 23, 
		RULE_print = 24, RULE_tryStatement = 25, RULE_catchPart = 26, RULE_switchStatement = 27, 
		RULE_switchCase = 28, RULE_defaultCase = 29, RULE_whileStatement = 30, 
		RULE_ifStatement = 31, RULE_def = 32, RULE_type = 33, RULE_function = 34, 
		RULE_functionparameter = 35, RULE_assignmentOperator = 36, RULE_expression = 37, 
		RULE_expr = 38, RULE_buildfunction = 39, RULE_constructor = 40, RULE_createstate = 41, 
		RULE_extends = 42, RULE_navigation = 43, RULE_materialtitle = 44, RULE_height = 45, 
		RULE_width = 46, RULE_materialtheme = 47, RULE_materialdebug = 48, RULE_themedata = 49, 
		RULE_onpressed = 50, RULE_setstate = 51, RULE_setbody = 52, RULE_child = 53, 
		RULE_scaffold = 54, RULE_materialapp = 55, RULE_container = 56, RULE_boxdecoration = 57, 
		RULE_num = 58, RULE_padding = 59, RULE_column = 60, RULE_row = 61, RULE_expanded = 62, 
		RULE_text = 63, RULE_image = 64, RULE_obx = 65, RULE_sizedbox = 66, RULE_button = 67, 
		RULE_center = 68, RULE_icon = 69, RULE_widget = 70, RULE_stateWidget = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "imports", "main", "runappfunction", "istedaaaclass", "callfunction", 
			"widgetclass", "stlessclass", "stlessclassbody", "stfulclass", "stateclass", 
			"classes", "regularclass", "controllerClass", "declare", "defineRXvariable", 
			"definevariable", "list", "statement", "controllerFunctions", "controllerAttributes", 
			"controllerPutFind", "block", "changingvalue", "print", "tryStatement", 
			"catchPart", "switchStatement", "switchCase", "defaultCase", "whileStatement", 
			"ifStatement", "def", "type", "function", "functionparameter", "assignmentOperator", 
			"expression", "expr", "buildfunction", "constructor", "createstate", 
			"extends", "navigation", "materialtitle", "height", "width", "materialtheme", 
			"materialdebug", "themedata", "onpressed", "setstate", "setbody", "child", 
			"scaffold", "materialapp", "container", "boxdecoration", "num", "padding", 
			"column", "row", "expanded", "text", "image", "obx", "sizedbox", "button", 
			"center", "icon", "widget", "stateWidget"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'const'", "'''", "'/'", null, "'child'", "'color'", "'Column'", 
			"'Widget'", "'main'", "'value'", "'put'", "'find'", "'Obx'", "'runApp'", 
			"'Row'", "'Container'", "'Expanded'", "'Padding'", "'padding'", "'Scaffold'", 
			"'body:'", "'Image.network'", "'decoration:'", null, "'borderRadius'", 
			null, null, "'Text'", "'MaterialButton'", "'Center'", "'SizedBox'", "'AppBar'", 
			"'back'", "'Icon'", "'Icons'", "'appBar'", "'height:'", "'width:'", null, 
			null, "'onPressed:'", "'StatelessWidget'", "'StatefulWidget'", "'setState'", 
			"'class '", null, "'extends'", "'='", "'return'", "'build'", "'State'", 
			null, "'Get'", "'to'", "'@override'", "'(BuildContext context)'", null, 
			"'debugShowCheckedModeBanner:'", "'title'", "'theme:'", "'ThemeData'", 
			"'primarySwatch'", "'Key'", "'key'", "'final'", "'super'", "'import'", 
			"'package'", null, null, "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'required'", "'this'", "':'", "'flutter'", "'dart'", "';'", "'?'", "'.'", 
			"'<'", "'>'", "'$'", "'int'", "'Rx<int>'", "'obs'", "'String'", "'GetxController'", 
			"'void'", "'bool'", "'false'", "'true'", "'createState'", "'EdgeInsets.all'", 
			"'Colors'", null, "'BoxDecoration'", null, null, null, null, null, null, 
			null, "'-'", null, null, null, "'while'", "'print'", "'try'", "'var'", 
			"'switch'", "'for'", "'if'", "'else'", "'enum'", "'do'", "'break'", "'case'", 
			"'catch'", "'class'", "'default'", "'style'", "'TextStyle'", "'fontSize'", 
			"'function'", "'operator'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONST", "SINGLE_QUOTE", "SLASH", "WHITESPACE", "CHILD", "COLOR", 
			"COLUMN", "WIDGET", "MAIN", "VALUE", "PUT", "FIND", "OBX", "RUNAPP", 
			"ROW", "CONTAINER", "EXPANDED", "PADDING", "PADD", "SCAFFOLD", "BODY", 
			"IMAGE", "DECORATION", "BORDER", "BORDERRADIUS", "BORDERRADIUSVALUE", 
			"CHILDREN", "TEXT", "MATERIALBUTTON", "CENTER", "SIZEDBOX", "APPBARWIDGET", 
			"BACK", "ICON", "ICONS", "APPBAR", "HEIGHT", "WIDTH", "MAINAXIS", "CROSSAXIS", 
			"ONPRESSED", "STATELESS", "STATEFUL", "SETSTATE", "CLAS", "NUM", "EXTENDS", 
			"EQUAL", "RETURN", "BUILD", "STATE", "HOME", "GET", "TO", "OVERRIDEWORD", 
			"BUILDCONTEXT", "MATERIALAPP", "DEBUG", "TITLE", "THEME", "THEMEDATA", 
			"PRIMARYSWATCH", "KEYCAPITAL", "KEYSMALL", "FINAL", "SUPER", "IMPORT", 
			"PACKAGE", "LIST", "URL", "COMMA", "RIGHTKAOS", "LEFTKAOS", "RIGHTSQUARE", 
			"LEFTSQUARE", "RIGHTCURLY", "LEFTCURLY", "REQUIRED", "THIS", "TWOPOINTSABOVEEACHOTHER", 
			"FLUTTER", "DART", "SEMICOLON", "QUESTIONMARK", "DOT", "OPEN_C", "CLOSE_C", 
			"DOLAR", "INT", "RXINT", "OBS", "STRING", "GETXCONTROLLER", "VOID", "BOOLEAN", 
			"FALSE", "TRUE", "CREATESTATE", "EDGEINSETS", "COLORS", "COLORVALUE", 
			"BOXDECORATION", "COMPOUNDASSIGMENTOPERATOR", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
			"INCREAMENTOPERATOR", "MULTIPLICATIVEOPERATOR", "ADDITIVEOPERATOR", "DIVISIONOPERATOR", 
			"MINUSOPERATOR", "ICONSVALUE", "EQUALITYOPERATOR", "ANDOR", "WHILE", 
			"PRINT", "TRY", "VAR", "SWITCH", "FOR", "IF", "ELSE", "ENUM", "DO", "BREAK", 
			"CASE", "CATCH", "CLASS", "DEFAULT", "STYLE", "TEXTSTYLE", "FONTSIZE", 
			"FUNCTION", "OPERATOR", "STRING_LINE", "VARIABLE", "BOOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public WidgetclassContext widgetclass() {
			return getRuleContext(WidgetclassContext.class,0);
		}
		public List<ImportsContext> imports() {
			return getRuleContexts(ImportsContext.class);
		}
		public ImportsContext imports(int i) {
			return getRuleContext(ImportsContext.class,i);
		}
		public List<ClassesContext> classes() {
			return getRuleContexts(ClassesContext.class);
		}
		public ClassesContext classes(int i) {
			return getRuleContext(ClassesContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(144);
				imports();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			main();
			setState(151);
			widgetclass();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLAS) {
				{
				{
				setState(152);
				classes();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(DartParser.IMPORT, 0); }
		public TerminalNode STRING_LINE() { return getToken(DartParser.STRING_LINE, 0); }
		public TerminalNode SEMICOLON() { return getToken(DartParser.SEMICOLON, 0); }
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(IMPORT);
			setState(159);
			match(STRING_LINE);
			setState(160);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(DartParser.MAIN, 0); }
		public TerminalNode RIGHTKAOS() { return getToken(DartParser.RIGHTKAOS, 0); }
		public TerminalNode LEFTKAOS() { return getToken(DartParser.LEFTKAOS, 0); }
		public TerminalNode RIGHTCURLY() { return getToken(DartParser.RIGHTCURLY, 0); }
		public RunappfunctionContext runappfunction() {
			return getRuleContext(RunappfunctionContext.class,0);
		}
		public TerminalNode LEFTCURLY() { return getToken(DartParser.LEFTCURLY, 0); }
		public List<DeclareContext> declare() {
			return getRuleContexts(DeclareContext.class);
		}
		public DeclareContext declare(int i) {
			return getRuleContext(DeclareContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			type();
			setState(163);
			match(MAIN);
			setState(164);
			match(RIGHTKAOS);
			setState(165);
			match(LEFTKAOS);
			setState(166);
			match(RIGHTCURLY);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 44)) & ~0x3f) == 0 && ((1L << (_la - 44)) & 1512932330439173L) != 0) || ((((_la - 114)) & ~0x3f) == 0 && ((1L << (_la - 114)) & 6291543L) != 0)) {
				{
				setState(169);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FINAL:
				case LIST:
				case INT:
				case RXINT:
				case STRING:
				case VOID:
				case BOOL:
					{
					setState(167);
					declare();
					}
					break;
				case SETSTATE:
				case NUM:
				case GET:
				case RIGHTCURLY:
				case WHILE:
				case PRINT:
				case TRY:
				case SWITCH:
				case IF:
				case VARIABLE:
					{
					setState(168);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			runappfunction();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 44)) & ~0x3f) == 0 && ((1L << (_la - 44)) & 1512932330439173L) != 0) || ((((_la - 114)) & ~0x3f) == 0 && ((1L << (_la - 114)) & 6291543L) != 0)) {
				{
				setState(177);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FINAL:
				case LIST:
				case INT:
				case RXINT:
				case STRING:
				case VOID:
				case BOOL:
					{
					setState(175);
					declare();
					}
					break;
				case SETSTATE:
				case NUM:
				case GET:
				case RIGHTCURLY:
				case WHILE:
				case PRINT:
				case TRY:
				case SWITCH:
				case IF:
				case VARIABLE:
					{
					setState(176);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(LEFTCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RunappfunctionContext extends ParserRuleContext {
		public TerminalNode RUNAPP() { return getToken(DartParser.RUNAPP, 0); }
		public TerminalNode RIGHTKAOS() { return getToken(DartParser.RIGHTKAOS, 0); }
		public TerminalNode CONST() { return getToken(DartParser.CONST, 0); }
		public IstedaaaclassContext istedaaaclass() {
			return getRuleContext(IstedaaaclassContext.class,0);
		}
		public TerminalNode LEFTKAOS() { return getToken(DartParser.LEFTKAOS, 0); }
		public TerminalNode SEMICOLON() { return getToken(DartParser.SEMICOLON, 0); }
		public RunappfunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_runappfunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterRunappfunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitRunappfunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitRunappfunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RunappfunctionContext runappfunction() throws RecognitionException {
		RunappfunctionContext _localctx = new RunappfunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_runappfunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(RUNAPP);
			setState(185);
			match(RIGHTKAOS);
			setState(186);
			match(CONST);
			setState(187);
			istedaaaclass();
			setState(188);
			match(LEFTKAOS);
			setState(189);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
